--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "firebase/php-jwt": "^5.0",
-        "endroid/qr-code": "^3.6"
+        "endroid/qr-code": "^3.6",
+        "phpmailer/phpmailer": "~6.0"
     }
 }
