--- a/.htaccess
+++ b/.htaccess
@@ -6,4 +6,9 @@
 	RewriteCond %{REQUEST_FILENAME} !-f
 	RewriteCond %{REQUEST_FILENAME} !-d
 	RewriteRule ^(.*)$ index.php/$1 [L,QSA]
+    
+    RewriteCond %{HTTP_HOST} ^www\. [OR]
+    RewriteCond %{HTTPS} off
+    RewriteCond %{HTTP_HOST} ^(?:www\.)?(.+)$
+    RewriteRule ^ https://%1%{REQUEST_URI} [NE,L,R]
 </IfModule>
